--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,13 @@
 Package: yesno
 Title: Ask a Custom Yes-No Question
 Version: 0.0.2
-Date: 2016-11-05
-Authors@R: person("Joe", "Thorley", email = "joe@poissonconsulting.ca", role = c("aut", "cre"))
-Description: Asks a custom Yes-No question with variable responses.
+Date: 2016-11-28
+Authors@R: c(
+    person("Hadley", "Wickham", email = "hadley@rstudio.com", role = "aut"),
+    person("Joe", "Thorley", email = "joe@poissonconsulting.ca", role = c("com", "cre")))
+Description: Asks a custom Yes-No question with variable responses. 
+    The single function is the internal yesno function from devtools 
+    (modified to return TRUE if the user answers yes).
 License: GPL (>= 2)
 Depends:
     R (>= 3.3.1)
