--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,15 @@
 Package: yesno
-Title: Ask Custom Yes-No Questions
-Version: 0.0.2.9003
-Date: 2017-12-08
+Title: Ask Yes-No Questions
+Version: 0.0.2.9004
 Authors@R: c(
     person("Hadley", "Wickham", email = "hadley@rstudio.com", role = "aut"),
-    person("Joe", "Thorley", email = "joe@poissonconsulting.ca", role = c("com", "cre")))
-Description: Asks custom Yes-No questions with variable or fixed responses.
+    person("Joe", "Thorley", email = "joe@poissonconsulting.ca", role = c("aut", "cre")))
+Description: Asks Yes-No questions with variable or custom responses.
 License: GPL (>= 2)
+URL: https://github.com/poissonconsulting/yesno
+BugReports: https://github.com/poissonconsulting/yesno/issues 
 Depends:
-    R (>= 3.3.0)
+    R (>= 3.1.0)
 Imports:
     utils
 Suggests:
