--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,3 +18,4 @@ BugReports: https://github.com/poissonconsulting/yesno/issues
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.0.2
+Roxygen: list(markdown = TRUE)
