--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,14 @@ language: R
 cache: packages
 
 r:
-  - oldrel
-  - release
   - devel
-
-r_packages:
-  - covr
+  - release
+  - oldrel
+  - 3.5
+  - 3.4
+  - 3.3
+  - 3.2
+  - 3.1
 
 after_success:
   - Rscript -e 'covr::codecov()'
@@ -18,4 +20,4 @@ notifications:
     rooms:
       - poissonconsulting:BKjfn7jsVh8zXTu2rq7BEQEb
     on_success: change
-    on_failure: always
+    on_failure: change
