--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,9 +3,12 @@ Title: Ask Yes-No Questions
 Version: 0.1.0.9002
 Authors@R: c(
     person("Joe", "Thorley", , "joe@poissonconsulting.ca", c("aut", "cre"), comment = c(ORCID = "0000-0002-7683-4592")),
-    person("Hadley", "Wickham", , "hadley@rstudio.com", role = "aut"))
+    person("Hadley", "Wickham", , "hadley@rstudio.com", role = "aut", comment = c(ORCID = "0000-0003-4757-117X"))
+  )
 Description: Asks Yes-No questions with variable or custom responses.
 License: GPL (>= 2)
+URL: https://github.com/poissonconsulting/yesno
+BugReports: https://github.com/poissonconsulting/yesno/issues 
 Depends:
     R (>= 3.2)
 Imports:
@@ -13,8 +16,6 @@ Imports:
 Suggests:
     testthat,
     covr
-URL: https://github.com/poissonconsulting/yesno
-BugReports: https://github.com/poissonconsulting/yesno/issues 
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.0.2
