--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Authors@R: c(
     person("Hadley", "Wickham", , "hadley@rstudio.com", role = "aut", comment = c(ORCID = "0000-0003-4757-117X"))
   )
 Description: Asks Yes-No questions with variable or custom responses.
-License: GPL (>= 2)
+License: MIT + file LICENSE
 URL: https://github.com/poissonconsulting/yesno
 BugReports: https://github.com/poissonconsulting/yesno/issues 
 Depends:
