--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,9 +14,10 @@ Depends:
 Imports:
     utils
 Suggests:
-    testthat,
+    testthat (>= 3.0.0),
     covr
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1.9000
 Roxygen: list(markdown = TRUE)
+Config/testthat/edition: 3
