--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Authors@R: c(
   )
 Description: Asks Yes-No questions with variable or custom responses.
 License: MIT + file LICENSE
-URL: https://github.com/poissonconsulting/yesno
+URL: https://github.com/poissonconsulting/yesno, https://poissonconsulting.github.io/yesno/
 BugReports: https://github.com/poissonconsulting/yesno/issues 
 Depends:
     R (>= 3.4)
@@ -18,6 +18,6 @@ Suggests:
     covr
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.1.1.9000
+RoxygenNote: 7.3.2
 Roxygen: list(markdown = TRUE)
 Config/testthat/edition: 3
