fix author typo and change lazydata to false since no data directory in pkg

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: yesno
 Title: Ask Yes-No Questions
 Version: 0.1.2.9000
 Authors@R: c(
-    person("Ayla", "Pearson", "ayla@poissonconsulting.ca", role = "cre",
+    person("Ayla", "Pearson", , "ayla@poissonconsulting.ca", role = "cre",
             comment = c(ORCID = "0000-0001-7388-1222")),
     person("Joe", "Thorley", , "joe@poissonconsulting.ca", role = "aut",
            comment = c(ORCID = "0000-0002-7683-4592")),
@@ -21,7 +21,7 @@ Suggests:
     testthat (>= 3.0.0),
     covr
 Encoding: UTF-8
-LazyData: true
+LazyData: false
 RoxygenNote: 7.3.2
 Roxygen: list(markdown = TRUE)
 Config/testthat/edition: 3
