--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Title: Ask Yes-No Questions
 Version: 0.1.2.9000
 Authors@R: c(
     person("Ayla", "Pearson", , "ayla@poissonconsulting.ca", role = "cre",
-            comment = c(ORCID = "0000-0001-7388-1222")),
+           comment = c(ORCID = "0000-0001-7388-1222")),
     person("Joe", "Thorley", , "joe@poissonconsulting.ca", role = "aut",
            comment = c(ORCID = "0000-0002-7683-4592")),
     person("Hadley", "Wickham", , "hadley@rstudio.com", role = "aut",
@@ -11,17 +11,17 @@ Authors@R: c(
   )
 Description: Asks Yes-No questions with variable or custom responses.
 License: MIT + file LICENSE
-URL: https://github.com/poissonconsulting/yesno, https://poissonconsulting.github.io/yesno/
-BugReports: https://github.com/poissonconsulting/yesno/issues 
+URL: https://github.com/poissonconsulting/yesno,
+    https://poissonconsulting.github.io/yesno/
+BugReports: https://github.com/poissonconsulting/yesno/issues
 Depends:
     R (>= 3.4)
 Imports:
     utils
 Suggests:
-    testthat (>= 3.0.0),
-    covr
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: false
-RoxygenNote: 7.3.2
 Roxygen: list(markdown = TRUE)
-Config/testthat/edition: 3
+RoxygenNote: 7.3.2
