--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,9 +4,9 @@ Version: 0.1.3
 Authors@R: c(
     person("Ayla", "Pearson", , "ayla@poissonconsulting.ca", role = "cre",
            comment = c(ORCID = "0000-0001-7388-1222")),
-    person("Joe", "Thorley", , "joe@poissonconsulting.ca", role = "aut",
+    person("Joe", "Thorley", , "joe@poissonconsulting.ca", role = c("aut", "cph"),
            comment = c(ORCID = "0000-0002-7683-4592")),
-    person("Hadley", "Wickham", , "hadley@rstudio.com", role = "aut",
+    person("Hadley", "Wickham", , "hadley@rstudio.com", role = c("aut", "cph"),
            comment = c(ORCID = "0000-0003-4757-117X"))
   )
 Description: Asks Yes-No questions with variable or custom responses.
