--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -46,6 +46,9 @@ jobs:
 
       - uses: r-lib/actions/setup-pandoc@v2
 
+      # Begin custom
+      # End custom
+
       - uses: r-lib/actions/setup-r@v2
         with:
           r-version: ${{ matrix.config.r }}
