--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,3 +25,4 @@ Encoding: UTF-8
 LazyData: false
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2.9000
+Config/Needs/website: poissonconsulting/poissontemplate
